deployments/openshift/kustomize/base/hms-api/eventstore/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hms-api-eventstore
spec:
  selector:
    matchLabels:
      name: hms-api-eventstore 
  serviceName: hms-api-eventstore
  replicas: 3 # Needs to be the same as EVENTSTORE_CLUSTER_SIZE
  template:
    metadata:
      labels:
        name: hms-api-eventstore 
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "name"
                    operator: In
                    values:
                    - hms-api-eventstore
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: eventstore
        image: eventstore/eventstore:22.10.2-bionic #can't pull from hms-api-eventstore:latest for some reason
        ports: 
        - containerPort: 2113
          name: eventstore-web
        - containerPort: 1113
          name: eventstore-tcp
        - containerPort: 2112
          name: gossip
        volumeMounts:
        - name: hms-api-eventstore-data
          mountPath: /var/lib/eventstore
        livenessProbe:
          httpGet:
            path: /
            port: 2113
          initialDelaySeconds: 30
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 2113
          initialDelaySeconds: 5
          periodSeconds: 5
  volumeClaimTemplates:
  - metadata:
      name: hms-api-eventstore-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
