deployments/openshift/kustomize/base/hms-api/eventstore/np.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-ingress-eventstore
spec:
  podSelector:
    matchLabels:
      name: hms-api-eventstore
  ingress:
    - {}
  policyTypes:
    - Ingress
